# brokoli

./: Cargo.toml  docker-compose.yml
.docker/mongo/: mongo-init.js
src/: main.rs
src/domain/: mod.rs
src/domain/sharedkernel/: error.rs  password.rs
src/domain/user/: account.rs  mod.rs  registration.rs  repository.rs
src/infrastructure/: mod.rs
src/sharedkernel/: email.rs  error.rs  function.rs  mod.rs
src/user/: account.rs  registration.rs  repository.rs
