[package]
name = "brokoli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.15", features = ["derive"] }
mockall = "0.11.3"
pwhash = "1"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
